--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ice-ice-baby",
   "version": "1.0.2",
-  "description": "if there was a `Promise` yo i'll solve it check out the hook while my dj `revolve`s it",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
